@@ -26,6 +26,10 @@ Modified: 2001 AlansFixes
 int
 NIiter(CKTcircuit *ckt, int maxIter)
 {
+    /* Francesco Lannutti - NEED TO PIVOT Fix */
+    int SMPreorderFromSMPluFac ;
+    SMPreorderFromSMPluFac = 0 ;
+
     int iterno;
     int ipass;
     int error;
@@ -79,10 +83,17 @@ NIiter(CKTcircuit *ckt, int maxIter)
 #else /* NEWPRED */
         if(1) { /* } */
 #endif /* NEWPRED */
-            error = CKTload(ckt);
+
+            /* Francesco Lannutti - NEED TO PIVOT Fix */
+            error = 0 ;
+            if (!SMPreorderFromSMPluFac)
+            {
+                error = CKTload (ckt) ;
+                iterno++ ;
+            }
+
             /*printf("loaded, noncon is %d\n",ckt->CKTnoncon);*/
             /*fflush(stdout);*/
-            iterno++;
             if(error) {
                 ckt->CKTstat->STATnumIter += iterno;
 #ifdef STEPDEBUG
@@ -113,8 +124,16 @@ NIiter(CKTcircuit *ckt, int maxIter)
 
             if(ckt->CKTniState & NISHOULDREORDER) {
                 startTime = SPfrontEnd->IFseconds();
-                error = SMPreorder(ckt->CKTmatrix,ckt->CKTpivotAbsTol,
-                        ckt->CKTpivotRelTol,ckt->CKTdiagGmin);
+
+                /* Francesco Lannutti - NEED TO PIVOT Fix */
+                if (SMPreorderFromSMPluFac)
+                {
+                    error = SMPreorder (ckt->CKTmatrix, ckt->CKTpivotAbsTol, ckt->CKTpivotRelTol, 0) ;
+                    SMPreorderFromSMPluFac = 0 ;
+                } else {
+                    error = SMPreorder (ckt->CKTmatrix, ckt->CKTpivotAbsTol, ckt->CKTpivotRelTol, ckt->CKTdiagGmin) ;
+                }
+
                 ckt->CKTstat->STATreorderTime +=
                         SPfrontEnd->IFseconds() - startTime;
                 if(error) {
@@ -144,6 +163,10 @@ NIiter(CKTcircuit *ckt, int maxIter)
                         SPfrontEnd->IFseconds() - startTime;
                 if(error) {
                     if( error == E_SINGULAR ) {
+
+                        /* Francesco Lannutti - NEED TO PIVOT Fix */
+                        SMPreorderFromSMPluFac = 1 ;
+fprintf (stderr, "CIAO\n") ;
                         ckt->CKTniState |= NISHOULDREORDER;
                         DEBUGMSG(" forced reordering....\n");
                         continue;
