@@ -1,3 +1,12 @@
+2012-09-08  Francesco Lannutti
+ * src/maths/KLU/klusmp.c
+ * src/maths/ni/niiter.c
+  Corrected a possible bug that
+   probably comes from SPICE
+   Berkeley in NIiter. It can
+   affect convergence during
+   dynamic gmin stepping algorithm
+
 2012-08-25  Francesco Lannutti
  * src/maths/KLU/klusmp.c
  * src/spicelib/analysis/cktsetup.c
